--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <footer class="footer">
         <h1>Aca va el footer</h1>
+        <h2>Verificacion de cambios </h2>
     </footer>
     
 </body>
