--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <header class="header">
         <h1>Aca va el header</h1>
+        <h2>Cambio al hedear</h2>
     </header>
 
     <div class="contenido">
@@ -18,13 +19,7 @@
 
     <footer class="footer">
         <h1>Aca va el footer</h1>
-        <ul>
-            <li>Elemento 1</li>
-            <li>Elemento 2</li>
-            <li>Elemento 3</li>
-            <li>Elemento 4</li>
-            <li>Elemento 5</li>
-        </ul>
+        
     </footer>
     
 </body>
