--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <h1>Aca va el footer</h1>
         <h2>Verificacion de cambios </h2>
     </footer>
+
+    <img src="Goldu Fachero.jpg" alt="">
     
 </body>
 </html>
